--- a/_sources/lecture11.ipynb
+++ b/_sources/lecture11.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "In Example 15, we examined a spring in a gravity-free, friction-free environment. Whilst gravity-free environments exist, it is never possible to have an environment completely free of friction. Even if we are in space, there will be some friction due to the spring itself. But also, by accounting for friction, we can bring our example down to Earth (quite literally). This lecture will explore what happens when we account for friction, as an example of modelling with homogeneous second order ODEs.\n",
     "\n",
-    "```{prf:example}\n",
+    "````{prf:example}\n",
     "A particle of mass $m$ is attached to the end of a massless spring of stiffness $k$ on a horizontal table. Let the extension of the spring be $x(t)$ at time $t$. The friction (from the table, spring, and air) causes a force of $2 \\beta \\omega m \\dot{x}$ to act on the particle in the opposite direction to motion, where $\\beta>0$ is a constant and $\\omega=+\\sqrt{\\frac{k}{m}}$. Show that the equation of motion of the particle is\n",
     "\n",
     "$$\n",
@@ -33,7 +33,7 @@
     "*Figure 16: A spring on a table, with a mass on one end and fixed at the other end.*\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "The forces acting on the particle are the tension in the spring, $T$, and the resistance, $R$, both acting horizontally to oppose motion. By Hooke's Law (see Example 15), the tension in the spring is $T=k x$. The resistance is $R=2 \\beta \\omega m \\dot{x}$. Since both $R$ and $T$ act in the opposite direction to the motion, the second law of motion (Equation 106) gives\n",
     "\n",
     "$$\n",
@@ -104,7 +104,7 @@
     "\n",
     "where $A$ and $B$ are constants. Here, as $t \\rightarrow \\infty,(A t+B) \\exp (-\\omega t) \\rightarrow 0$ so at long times the mass moves exponentially towards its equilibrium location. In Figure (17), we see the four qualitative possibilities for the motion of $x(t)$, depending on the signs of $A$ and $B$.\n",
     "\n",
-    "<img src=\"mas108_damped_osc2png\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_damped_osc2.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 17: Examples of Equation (131) for various values of $A$ and $B$. Notice that for some values (e.g. $A=B=1$ in top-left and $A=B=-1$ in bottom-right) the mass returns monotonically to its resting location. For others (e.g. $A=1, B=-1$ in top-right and $A=-1, B=1$ in bottom-left) the mass moves in one direction, turns once, and then settles to its equilibrium location.*\n",
     "\n",
@@ -143,6 +143,7 @@
     "\n",
     "The sine and cosine terms cause the mass $m$ to oscillate between a positive and negative extension, whilst the $\\exp (-\\omega t / 2)$ term causes those oscillations to decrease over time. Figure 18 gives a plot of Equation (134) for $\\omega=1, A=0, B=1$.\n",
     "```\n",
+    "````\n",
     "```{note}\n",
     "The previous example has three distinct regions, $\\beta>1, \\beta=1$, and $\\beta<1$. These correspond, respectively, to the results from Propositions 4, 5, and 6. Physically, the $\\beta>1$ case is called strongly damped and the spring returns monotonically to its equilibrium state. The $\\beta<1$ case is called weakly damped and the spring undergoes damped oscillations as it returns to its equilibrium state. The $\\beta=1$ case is called critically damped and the extension of the spring may not move monotonically, but there will be at most one turning point (Figure 17).\n",
     "```\n",
