--- a/_sources/lecture12.ipynb
+++ b/_sources/lecture12.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Before we go any further, let's start with an example.\n",
     "\n",
-    "```{prf:example}\n",
+    "````{prf:example}\n",
     "A particle $P$ of mass $m$ is attached to one end of a spring of natural length $L$ and stiffness $k$. The other end of the spring is fixed at the point $A$. Initially the spring hangs down vertically in equilibrium. The point $A$ is then set in vertical motion, so that its displacement from its initial position is\n",
     "\n",
     "$$\n",
@@ -29,7 +29,7 @@
     "where $\\omega$ is a positive constant which should be determined.\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "The forces acting on $P$ are the weight, $m g$, acting vertically downwards, and the tension, $T$, in the spring, acting vertically upwards. In equilibrium, let the tension in the spring be $T=T_{0}$ and the extension of the spring be $a$. By Hooke's Law, $T_{0}=k a$. Since the system is in equilibrium, the vertical forces balance (Figure 19), so\n",
     "\n",
     "$$\n",
@@ -80,6 +80,7 @@
     "\n",
     "where $\\omega^{2}=\\frac{k}{m}$, so that $\\omega=\\sqrt{\\frac{k}{m}}$.\n",
     "```\n",
+    "````\n",
     "Notice that the resulting ODE (Equation 141) is not in the form of Equation (109) so we cannot use our results from Propositions 4-6.\n",
     "```{prf:definition}\n",
     ":label: def12_1\n",
@@ -105,11 +106,11 @@
     "\n",
     "The problem with this method is that Step 1 does not always work for any function $f(t)$. However, it usually works for polynomials, exponential functions, sine, and cosine.\n",
     "\n",
-    "```{prf:example}\n",
+    "````{prf:example}\n",
     "Find the general solution to Equation (141) in the case $\\sigma^{2} \\neq \\omega^{2}$.\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "The right-hand side of Equation (141) is $\\sin (\\sigma t)$, so we will try to find a solution of the form $x(t)=A \\sin (\\sigma t)$. Here, $\\dot{x}(t)=A \\sigma \\cos (\\sigma t)$ and $\\ddot{x}(t)=-A \\sigma^{2} \\sin (\\sigma t)$. Plugging these into Equation (141) gives\n",
     "\n",
     "$$\n",
@@ -152,6 +153,7 @@
     "\\end{equation*}\n",
     "$$\n",
     "```\n",
+    "````\n",
     "The tricky thing about this method is finding a good guess for the form of the particular solution. Here's some rules as to what you should try for certain specific functions.\n",
     "\n",
     "1. If $f(t)$ is a polynomial of degree $n$, i.e. $f(t)=a_{0}+a_{1} t+a_{2} t^{2}+\\cdots+a_{n} t^{n}$, try setting $x_{P}(t)$ to be another polynomial of degree $n$, i.e. $x_{P}(t)=A_{0}+A_{1} t+A_{2} t^{2}+\\cdots+A_{n} t^{n}$.\n",
