--- a/_sources/lecture13.ipynb
+++ b/_sources/lecture13.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "In the last three lectures, we introduced both homogeneous and inhomogeneous ODEs, showing how they can be used to model oscillatory motion. Here we will work through a single example that encompasses the various cases we have looked at: undamped motion, damped motion, and forced motion.\n",
     "\n",
-    "```{prf:example}\n",
+    "````{prf:example}\n",
     "A particle $P$ of mass $m$ is tied to one end of an elastic string of natural length $a$ and stiffness $2 m \\omega^{2}$. The other end $B$ is attached to a point $A$ on a fixed smooth horizontal plane. The particle is released from rest on the plane when the string is extended to a length $2 a$.\n",
     "\n",
     "(a) Undamped motion. If the subsequent motion is unresisted, find an expression for extension, $x(t)$, of the string at time $t$.\n",
@@ -49,7 +49,7 @@
     "and find $x$ as a function of $t$.\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "(a) By Hooke's law, the tension in the string when it is extended a distance $x$ is $T=2 m \\omega^{2} x$. Since $T$ is the only force acting on the mass (Figure 20), the second law of motion (Equation 106) says that\n",
     "\n",
     "$$\n",
@@ -59,7 +59,7 @@
     "\\end{align*}\n",
     "$$\n",
     "\n",
-    "<img src=\"mas108_stretched_spring.png\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_stretched_string.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "Figure 20: Forces acting on the string in Example 20a.\n",
     "\n",
@@ -97,7 +97,7 @@
     "\n",
     "(b) In this case, the forces are shown in the diagram below\n",
     "\n",
-    "<img src=\"mas108_stretched_damped.png\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_stretched_string_damped.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "Using Newton's second law, the equation of motion is\n",
     "\n",
@@ -159,7 +159,7 @@
     "\n",
     "(c) In this case, the force diagram is\n",
     "\n",
-    "<img src=\"mas108_stretched_spring_forced.png\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_stretched_string_forced.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "The displacement of the particle from the fixed point $A$ is now $x+a+y$. Therefore the velocity of the particle is $\\dot{x}+\\dot{y}$ and the acceleration of the particle is $\\ddot{x}+\\ddot{y}$. Using Newton's\n",
     "second law, the equation of motion is\n",
@@ -251,6 +251,8 @@
     "\\end{equation*}\n",
     "$$\n",
     "```\n",
+    "````\n",
+    "\n",
     "## Lecture 13 Homework exercises\n",
     "\n",
     "```{admonition} Exercise 27\n",
@@ -263,6 +265,14 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3282349",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
