--- a/_sources/lecture15.ipynb
+++ b/_sources/lecture15.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "*Figure 21: A particle moving in 3 dimensions, tracing out a path.*\n",
     "\n",
-    "```{prf:example}\n",
+    "````{prf:example}\n",
     "The position vector of a particle $P$ is given, at time $t$, by\n",
     "\n",
     "$$\n",
@@ -25,7 +25,7 @@
     "where g is a constant vector. Sketch the path of the particle.\n",
     "\n",
     "**Solution.** \n",
-    "\n",
+    "```{toggle}\n",
     "Since $\\overrightarrow{O P}=\\mathbf{r}$, the vector $\\overrightarrow{O P}$ is always in the direction of the constant vector $\\mathbf{g}$. Therefore $P$ moves along a straight line through the origin $O$ in the direction of $\\mathbf{g}$. At time $t$,\n",
     "\n",
     "$$\n",
@@ -37,8 +37,8 @@
     "Therefore the particle moves away from $O$ in the direction of g , and its distance from $O$ at time $t$ is $g t^{2} / 2$. A sketch of the path is given below.\n",
     "\n",
     "<img src=\"mas108_3D_particle_ex.png\" alt=\"drawing\" width=\"400\"/>\n",
-    "\n",
     "```\n",
+    "````\n",
     "Now we have shown how to describe the location of a particle, we also want to be able to describe its velocity and acceleration. For this, we need to know how to differentiate vectors.\n",
     "\n",
     "```{prf:definition}\n",
@@ -138,7 +138,7 @@
     "\n",
     "### 15.2 Examples\n",
     "\n",
-    "```{prf:example}\n",
+    "````{prf:example}\n",
     "The location vector of a particle $P$ is given, at time $t$, by\n",
     "\n",
     "$$\n",
@@ -150,7 +150,7 @@
     "where $\\mathbf{g}$ is a constant vector. Find the velocity, speed, and acceleration of the particle at time $t$.\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "The velocity is $\\mathbf{v}(t)=\\dot{\\mathbf{r}}(t)$. Since $\\mathbf{g}$ is a constant,\n",
     "\n",
     "$$\n",
@@ -167,9 +167,10 @@
     "\\end{equation*}\n",
     "$$\n",
     "```\n",
+    "````\n",
     "Notice that velocity and acceleration are vectors, whereas speed is a scalar.\n",
     "\n",
-    "```{prf:example}\n",
+    "````{prf:example}\n",
     "The location vector of a particle $P$ in two dimensions is given, at time $t$, by\n",
     "\n",
     "$$\n",
@@ -183,7 +184,7 @@
     "(c) Show that the acceleration is orthogonal to the velocity.\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "(a) The velocity is\n",
     "\n",
     "$$\n",
@@ -228,6 +229,7 @@
     "\\end{equation*}\n",
     "$$\n",
     "```\n",
+    "````\n",
     "Recall from your Core module that, since the dot product vanishes, this means that $\\mathbf{a}(t)$ and $\\mathbf{v}(t)$ are orthogonal. Acceleration acting orthogonally to the direction of motion is sometimes called centripetal acceleration.\n",
     "\n",
     "## Lecture 15 Homework exercises\n",
