--- a/_sources/lecture16.ipynb
+++ b/_sources/lecture16.ipynb
@@ -9,13 +9,13 @@
     "\n",
     "In the previous lecture, we looked at the motion of particles relative to a fixed origin, which we denoted by $O$. However, in reality objects will often be moving relative to one another. For example, you may be running in the park and about to reach a junction of footpaths, but see a cyclist coming along another path towards the same junction. Your motion relative to the cyclist determines whether one of you needs to change speed to avoid a collision. Similar situations happen at sea with boats moving along overlapping trajectories. In this lecture, we will develop the tools for modelling such situations. Let's start with an example.\n",
     "\n",
-    "```{prf:example}\n",
+    "````{prf:example}\n",
     "At time $t=0$ a boat leaves a port situated at the origin $O$ and moves with uniform velocity $u \\mathbf{i} \\mathrm{kmh}^{-1}$. (Here, $\\mathrm{kmh}^{-1}$ stands for 'kilometres per hour', the number of kilometres the boat will travel in an hour at its current speed.) A second boat is moving with uniform velocity $5 \\mathbf{i}+4 \\mathbf{j} \\mathrm{kmh}^{-1}$ and is initially at the point in the ocean with location vector $6 \\mathbf{i}-2 \\mathbf{j} \\mathrm{km}$ with respect to the origin, $O$.\n",
     "(a) Find the value of $u$ for which the boats collide.\n",
     "(b) Find the minimum distance between the boats when $u=7$.\n",
     "\n",
     "**Solution.** \n",
-    "\n",
+    "```{toggle}\n",
     "The most important thing to do at the start of any question on relative motion is to draw a sketch. This is given in Figure 23.\n",
     "\n",
     "<img src=\"mas108_relative_boat_motion.png\" alt=\"drawing\" width=\"400\"/>\n",
@@ -99,16 +99,17 @@
     "\n",
     "The minimum of $d(t)$ is therefore the minimum of $(t-1)^{2}$, which is where $t=1$. Here, $d(t)=\\sqrt{20}=4.47$ to three significant figures. Thus the minimum distance between the boats, when $u=7$, is 4.47 km .\n",
     "```\n",
+    "````\n",
     "The previous example motivated a few concepts, which could do with formal definitions.\n",
     "\n",
     "```{prf:definition}\n",
     "Suppose we have two moving objects, $A$ and $B$. Denote by $\\mathbf{r}_{A}(t)$ and $\\mathbf{r}_{B}(t)$ the location vectors of $A$ and $B$ at time $t$, respectively. Denote by $\\mathbf{v}_{A}(t)=\\dot{\\mathbf{r}}_{A}(t)$ and $\\mathbf{v}_{B}(t)=\\dot{\\mathbf{r}}_{B}(t)$ the velocities of $A$ and $B$ at time $t$, respectively. Then the location of $B$ relative to $A$ is $\\overrightarrow{A B}=\\mathbf{r}_{B}-\\mathbf{r}_{A}$. The velocity of $B$ relative to $A$ is $\\mathbf{v}_{B}-\\mathbf{v}_{A}$. Note that the distance between $A$ and $B$ is $|\\overrightarrow{A B}|=\\left|\\mathbf{r}_{B}-\\mathbf{r}_{A}\\right|$.\n",
     "```\n",
-    "```{prf:example} \n",
+    "````{prf:example} \n",
     "To a cyclist riding due East at $15 \\mathrm{kmh}^{-1}$ the wind appears to the cyclist to be blowing from the North-East at $12 \\mathrm{kmh}^{-1}$. Find the true velocity of the wind.\n",
     "\n",
     "**Solution.** \n",
-    "\n",
+    "```{toggle}\n",
     "As always, we start by drawing a sketch of the situation, which is shown in Figure (24).\n",
     "\n",
     "<img src=\"mas108_cycle_wind.png\" alt=\"drawing\" width=\"400\"/>\n",
@@ -139,6 +140,7 @@
     "\\end{equation*}\n",
     "$$\n",
     "```\n",
+    "````\n",
     "## Lecture 16 Homework exercises\n",
     "\n",
     "```{admonition} Exercise 31. \n",
