--- a/_sources/lecture17.ipynb
+++ b/_sources/lecture17.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "### 17.3 Examples\n",
     "\n",
-    "```{prf:example}\n",
+    "````{prf:example}\n",
     "A lift starts from rest at time $t=0$ and moves in three stages:\n",
     "\n",
     "- Stage 1. The lift moves upwards with constant acceleration for 2 s .\n",
@@ -96,7 +96,7 @@
     "After this period of 10 s , the lift is at rest at a height of 34 m above its starting point. Find the acceleration in Stage 1.\n",
     "\n",
     "**Solution.** \n",
-    "\n",
+    "```{toggle}\n",
     "We start by drawing a graph of velocity over time (Figure 25).\n",
     "\n",
     "<img src=\"mas108_vel_time_ex.png\" alt=\"drawing\" width=\"400\"/>\n",
@@ -118,11 +118,12 @@
     "\n",
     "Therefore $a=2$, and the acceleration in Stage 1 is $2 \\mathrm{~ms}^{-2}$.\n",
     "```\n",
-    "```{prf:example}\n",
+    "````\n",
+    "````{prf:example}\n",
     "A student standing on the edge of a cliff 75 m above sea level throws a stone vertically upwards with a speed of $10 \\mathrm{~ms}^{-1}$. Find the time at which the stone hits the water. You can assume the acceleration due to gravity is $g=9.8 \\mathrm{~ms}^{-2}$.\n",
     "\n",
     "**Solution.** \n",
-    "\n",
+    "```{toggle}\n",
     "As always, we start by drawing a sketch (Figure 26).\n",
     "\n",
     "<img src=\"mas108_stone_cliff.png\" alt=\"drawing\" width=\"400\"/>\n",
@@ -143,6 +144,7 @@
     "\n",
     "Then, as $t>0$, we have $t=5.06$ to three significant figures.\n",
     "```\n",
+    "````\n",
     "## Lecture 17 Homework exercises\n",
     "\n",
     "```{admonition} Exercise 33. \n",
