--- a/_sources/lecture18.ipynb
+++ b/_sources/lecture18.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "51b2deb5",
    "metadata": {},
@@ -102,15 +101,15 @@
     "\n",
     "where $a=\\tan (\\theta)$ and $b=g \\sec ^{2}(\\theta) /\\left(2 V^{2}\\right)$ are constants. This is a quadratic function, so the shape of the projectile's path is a parabola.\n",
     "\n",
-    "```{prf:example}\n",
-    "A person hits a ball with a bat at a height of 1 meter above the ground. The ball's initial speed is $25 \\mathrm{~ms}^{-1}$ at an angle of $\\frac{\\pi}{6}$ radians above the horizontal. Find the horizontal distance from the person to the place where the ball first bounces, assuming $g=9.8$.\n",
+    "````{prf:example}\n",
+    "A player for Sheffield Bruins baseball club hits a ball at a height of 1 meter above the ground. The ball's initial speed is $90mph$ (~$40m/s$) at an angle of $\\frac{\\pi}{6}$ radians above the horizontal. Find the horizontal distance from the person to the place where the ball first bounces, assuming $g=9.8$.\n",
     "\n",
     "<img src=\"mas108_projectile_ex.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 28: The trajectory of a ball.*\n",
     "\n",
     "**Solution.** \n",
-    "\n",
+    "```{toggle}\n",
     "As usual, we start with a sketch (Figure 28) Let the vertical height of the ball be $z \\mathrm{~m}$ above the point of projection and let the ball be $x \\mathrm{~m}$ horizontally from the person. Then\n",
     "\n",
     "$$\n",
@@ -119,11 +118,11 @@
     "\\end{equation*}\n",
     "$$\n",
     "\n",
-    "where $V=25, g=9.8$ and $\\theta=\\frac{\\pi}{6}$. Then we have, working to three significant figures,\n",
+    "where $V=45, g=9.8$ and $\\theta=\\frac{\\pi}{6}$. Then we have, working to three significant figures,\n",
     "\n",
     "$$\n",
     "\\begin{equation*}\n",
-    "z=0.577 x-0.0105 x^{2} \\tag{235}\n",
+    "z=0.577 x-0.00408 x^{2} \\tag{235}\n",
     "\\end{equation*}\n",
     "$$\n",
     "\n",
@@ -131,14 +130,15 @@
     "\n",
     "$$\n",
     "\\begin{align*}\n",
-    "& -1=0.577 d-0.0105 d^{2} \\\\\n",
-    "\\Longrightarrow & 0.0105 d^{2}-0.577 d-1=0 \\\\\n",
-    "\\Longrightarrow & d=\\frac{0.577 \\pm \\sqrt{0.577^{2}+4 \\times 0.0105}}{2 \\times 0.0105} \\tag{236}\n",
+    "& -1=0.577 d-0.00323 d^{2} \\\\\n",
+    "\\Longrightarrow & 0.00408 d^{2}-0.577 d-1=0 \\\\\n",
+    "\\Longrightarrow & d=\\frac{0.577 \\pm \\sqrt{0.577^{2}+4 \\times 0.00408}}{2 \\times 0.00408} \\tag{236}\n",
     "\\end{align*}\n",
     "$$\n",
     "\n",
-    "Since $d$ must be positive, we have $d \\approx 57$, so the ball first bounces 57 m away from the place it was hit.\n",
+    "Since $d$ must be positive, we have $d \\approx 73$, so the ball first bounces 73m (240 feet) away. (At the Bruins home ground this would probably mean a home run and a broken car window).\n",
     "```\n",
+    "````\n",
     "## Lecture 18 Homework exercises\n",
     "\n",
     "```{admonition} Exercise 39. \n",
@@ -149,6 +149,14 @@
     "from the point of projection and $k \\mathrm{~m}$ below it. Using $g=9.8 \\mathrm{~ms}^{-2}$, find the values of $T$ and $k$. Find the velocity of the stone when it strikes the ground.\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdafddb2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
