--- a/_sources/lecture19.ipynb
+++ b/_sources/lecture19.ipynb
@@ -9,13 +9,13 @@
     "\n",
     "We will end this series of lectures on motion with constant acceleration with two examples.\n",
     "\n",
-    "```{prf:example} \n",
+    "````{prf:example} \n",
     "A student descending in a lift at constant speed $V$ throws a ball vertically upwards with speed $U$ relative to the lift. Find the time that elapses before the ball\n",
     "(a) has zero velocity relative to the lift,\n",
     "(b) returns to the student's hand.\n",
     "\n",
     "**Solution.** \n",
-    "\n",
+    "```{toggle}\n",
     "As always, we start with a sketch (Figure 29).\n",
     "\n",
     "<img src=\"mas108_student_in_lift.png\" alt=\"drawing\" width=\"400\"/>\n",
@@ -70,7 +70,8 @@
     "\n",
     "Thus the ball returns to the student's hand at time $t=2 U / \\mathrm{g}$.\n",
     "```\n",
-    "```{prf:example}\n",
+    "````\n",
+    "````{prf:example}\n",
     "A particle is projected from the origin with speed $V$ at an angle $\\theta$ above the horizontal. There is no air resistance. Show that\n",
     "(a) The maximum height of the particle above the point of projection is\n",
     "\n",
@@ -91,7 +92,7 @@
     "$$\n",
     "\n",
     "**Solution.** \n",
-    "\n",
+    "```{toggle}\n",
     "Recall the following formulae for a projectile from Equations (225), (226), (228), and (229)\n",
     "\n",
     "$$\n",
@@ -147,6 +148,7 @@
     "\\end{align*}\n",
     "$$\n",
     "```\n",
+    "````\n",
     "## Lecture 19 Homework exercises\n",
     "\n",
     "```{admonition} Exercise 41. \n",
