--- a/_sources/lecture2.ipynb
+++ b/_sources/lecture2.ipynb
@@ -185,21 +185,17 @@
     "(multiply top and bottom by: $\\quad U(0)+[K-U(0)] R^{-t}$ )\n",
     "\n",
     "$$\n",
-    "\\left(\\begin{array}{ll}\n",
+    "\\begin{array}{ll}\n",
     "=\\frac{M^{2} R(R-1) U(0)}{M\\left\\{U(0)+[M(R-1)-U(0)] R^{-t}\\right\\}+M(R-1) U(0)} & (K=M(R-1)) \\\\\n",
-    "=\\frac{M R(R-1) U(0)}{U(0)+[M(R-1)-U(0)] R^{-t}+(R-1) U(0)}\n",
-    "\\end{array} \\quad \\quad \\text { (cancel } M \\mathrm{~s}\\right)\n",
+    "=\\frac{M R(R-1) U(0)}{U(0)+[M(R-1)-U(0)] R^{-t}+(R-1) U(0)} & (\\text { cancel } M \\mathrm{~s})\n",
+    "\\end{array} \n",
     "$$\n",
     "\n",
     "$=\\frac{M R(R-1) U(0)}{R U(0)+[M(R-1)-U(0)] R^{-t}}$\n",
     "\n",
     "$=\\frac{M(R-1) U(0)}{U(0)+[M(R-1)-U(0)] R^{-(t+1)}}$\n",
     "\n",
-    "(cancel $R \\mathrm{~s}$ )\n",
-    "\n",
     "$=\\frac{K U(0)}{U(0)+[K-U(0)] R^{-(t+1)}}$\n",
-    "\n",
-    "$(K=M(R-1))$\n",
     "\n",
     "$=U(t+1)$,\n",
     "\n",
