--- a/_sources/lecture3.ipynb
+++ b/_sources/lecture3.ipynb
@@ -68,8 +68,9 @@
     "\\end{equation*}\n",
     "$$\n",
     "\n",
-    "Equation (18) has an exact solution. It's a long task to figure this out by hand, so instead we can just go on the www.wolframalpha.com website and type in 'solve for B $0=\\mathrm{r} * \\mathrm{~B} *(1-\\mathrm{B})+\\mathrm{r} *(\\mathrm{~B}+\\mathrm{r} * \\mathrm{~B} *(1-\\mathrm{B})) *(1-\\mathrm{B}-\\mathrm{r} * \\mathrm{~B} *(1-\\mathrm{B}))^{\\prime}$. It then tells us that\n",
+    "Equation (18) has an exact solution. It's a long task to figure this out by hand, so instead we can just go on the www.wolframalpha.com website and type in our equation.\n",
     "\n",
+    "It then tells us that\n",
     "$$\n",
     "\\begin{equation*}\n",
     "B=\\frac{r+2 \\pm \\sqrt{r^{2}-4}}{2 r} \\tag{19}\n",
