--- a/_sources/lecture4.ipynb
+++ b/_sources/lecture4.ipynb
@@ -14,6 +14,7 @@
     "Suppose you buy a house and borrow $M$ pounds from the bank as a mortgage. The bank charges interest at a rate of $R \\%$ per year, and each year you pay $s$ pounds to the bank. How long does it take to pay off your mortgage, as a function of $M, R$, and $s$ ? Writing $r=R / 100$, find the numerical value of this time when $M=200,000$, $s=10,000$, and $r=0.02$. Are there any values of $M, R$, and $s$ for which you will never pay off your mortgage?\n",
     "\n",
     "**Solution.**\n",
+    "```{toggle}\n",
     "\n",
     "We can model this situation as follows\n",
     "\n",
@@ -57,6 +58,7 @@
     "so it will take 26 years to pay off your mortgage.\n",
     "\n",
     "You will not get a solution if $r M>s$, so in this case you will never pay off your mortgage. This is because the annual payments are not sufficient even for paying off the interest on the mortgage.\n",
+    "```\n",
     "````\n",
     "````{prf:example} Including a gestation period into population models. \n",
     ":label: ex4_2 \n",
@@ -69,6 +71,7 @@
     "(c) Find the steady state solution of the sequence $S(t)=U(t) / U(t-1)$ for $r=1$.\n",
     "\n",
     "**Solution.**\n",
+    "```{toggle}\n",
     "\n",
     "(a) Suppose we start with $U(0)$ organisms. In month one they breed, but they do not give birth, so at the end of the month we have $U(1)=U(0)$ organisms. In month two, those who bred in month one give birth at a rate $r$, so we have $r U(0)$ new organisms, in addition to the $U(1)$ we already have, so $U(2)=U(1)+r U(0)$. In general, in month $t+1$, we have all the organisms we had at the end of month $t$, which is $U(t)$ organisms, plus those born as a result of breeding in month $t$, which is $r U(t-1)$ organisms. The resulting model is\n",
     "\n",
@@ -99,6 +102,7 @@
     "& \\Longrightarrow S_{*}=\\frac{1 \\pm \\sqrt{1+4 r}}{2} \\tag{26}\n",
     "\\end{align*}\n",
     "$$\n",
+    "```\n",
     "````\n",
     "Notice that, for $r=1$, the positive value of $S_{*}$ is called the Golden Ratio. If you have never heard of the Golden Ratio then look it up using your favourite search engine. There are many claims about its relation to a wide range of applications (some more dubious than others).\n",
     "\n",
@@ -107,7 +111,7 @@
     "Suppose that there is a probability $p$ of there being a dry day (no rain) after a wet day (some rain) and a probability $q$ of there being a dry day after a dry day. Suppose it is a dry day today. What is the probability that it will be a dry day in $t$ days time, as a function of $p$ and $q$ ? Find the numerical value for $p=0.2$, and $q=0.8$, and $t=1,2,3,4,5$.\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "Let $U(t)$ be the probability that it is dry on day $t$. Then the probability of it being wet on day $t$ is $1-U(t)$. Thus probability of it being dry on day $t+1$ is\n",
     "\n",
     "$$\n",
@@ -125,6 +129,7 @@
     "$$\n",
     "\n",
     "If $p=0.2$ and $q=0.8$ then $U(t)=1,0.8,0.68,0.61,0.56,0.54$ for $t=0,1,2,3,4,5$ respectively. Note that $U(0)=1$ because the question stated 'it is a dry day today'.\n",
+    "```\n",
     "````\n",
     "````{prf:example} Competing species. \n",
     ":label: ex4_4\n",
@@ -146,7 +151,7 @@
     "(c) Which steady state solution does the system appear to be moving towards?\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "The parameter $r$ is the net reproductive rate of the organisms, which we are assuming is the same for both populations. Parameters $a$ and $\\alpha$ denote the strength of intraspecific competition (meaning the competition of rabbits with other rabbits and sheep with other sheep) for $U(t)$ and $V(t)$ respectively. The parameter $b$ denotes the effect of interspecific competition (meaning competition between rabbits and sheep) on the death rate of rabbits and $\\beta$ denotes the effect of interspecies competition on the death rate of sheep.\n",
     "\n",
     "(a) Let $U_{*}$ and $V_{*}$ denote the steady states of $U(t)$ and $V(t)$ respectively. Then, using\n",
@@ -182,6 +187,7 @@
     "\n",
     "(c) We see from Figure 7 that the solution seems to converge to the steady state solution from Equation (36), $U_{*}=V_{*}=1 / 3$. This means we can expect coexistence between the two\n",
     "species.\n",
+    "```\n",
     "````\n",
     "## Lecture 4 Homework exercises\n",
     "\n",
