--- a/_sources/lecture5.ipynb
+++ b/_sources/lecture5.ipynb
@@ -98,7 +98,7 @@
     "Find the solution to Equation (44) where $U(0)=1$.\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "First we rearrange Equation (44) to give\n",
     "\n",
     "$$\n",
@@ -150,6 +150,7 @@
     "U(t)=U(0) \\exp (r t)=\\exp (r t) \\tag{51}\n",
     "\\end{equation*}\n",
     "$$\n",
+    "```\n",
     "````\n",
     "Now, in Proposition 1, we found a solution to the original difference equation, Equation (5). Notice that Equation (5) is just Equation (42) with $\\tau=1$. So it is valuable to compare Equation (51) with the solution of Equation (5). They ought to be similar, right?\n",
     "\n",
@@ -193,7 +194,7 @@
     "Solve Equation (45) for $U(0)=K / 10$.\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "First we rearrange Equation (45) to give\n",
     "\n",
     "$$\n",
@@ -281,6 +282,7 @@
     "\\Longrightarrow U(t)=\\frac{K \\exp (r t)}{9+\\exp (r t)} \\tag{64}\n",
     "\\end{equation*}\n",
     "$$\n",
+    "```\n",
     "````\n",
     "To compare the general solution from Equation (62) to the discrete logistic model, recall two things. First, we were not able to find an exact analytic solution to the discrete logistic model (see Lecture 3), but we can for the continuous logistic model (Equation 62). Second, the behaviour of the discrete solution can get pretty wild (again, see Lecture 3), including solutions that never settle, period doubling, and chaos. In contrast, the continuous logistic model always tends towards a constant, positive, steady state, $K$ in a monotonic fashion (e.g. Figure 8).\n",
     "\n",
