--- a/_sources/lecture6.ipynb
+++ b/_sources/lecture6.ipynb
@@ -174,7 +174,7 @@
     "$$\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "First re-write Equation (91) as\n",
     "\n",
     "$$\n",
@@ -213,6 +213,7 @@
     "$$\n",
     "\n",
     "for a constant, $c$.\n",
+    "```\n",
     "````\n",
     "## Lecture 6 Homework exercises\n",
     "\n",
@@ -234,6 +235,47 @@
     "(g) $\\frac{\\mathrm{d} U}{\\mathrm{~d} t}-U-2 \\cos (t)=0$ with initial condition $U(0)=1$\n",
     "\n",
     "(h) $\\frac{\\mathrm{d} U}{\\mathrm{~d} t}-U-2 t=0$ with initial condition $U(0)=1$\n",
+    "```\n",
+    "```{admonition} Option extra: coding\n",
+    "The code below will show the time-course from the ODE we looked at in example 11. It computes the solution in two ways: it uses the explicit solution we found (having used an initial condition $U(0)=1$ to get a value for $c$), and it also uses an in-built 'numerical solver' to calculate the time-course. This is well beyond this module (you'll see it in more detail in the 2nd year scientific programming course) but just trust that it works! If you want a challenge, try altering the code to check your results for some of the questions in exercise 15.\n",
+    "\n",
+    "```python\n",
+    "# @title\n",
+    "#Accompanying python code for MAS108 lecture 6\n",
+    "#Code to produce plots of first-order linear ODEs\n",
+    "\n",
+    "# First we import the libraries we need\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.integrate import solve_ivp\n",
+    "\n",
+    "#A 'function' for the ODE\n",
+    "def ex11_ode(t,U):\n",
+    "    dUdt = -2*U*t+t\n",
+    "    return dUdt\n",
+    "\n",
+    "#The initial value of U\n",
+    "U0 = 1\n",
+    "\n",
+    "# The timespan we will inetgrate over\n",
+    "tspan=np.linspace(0,10,101)\n",
+    "\n",
+    "# The special funciton to numerically solve the ODE\n",
+    "sol = solve_ivp(ex11_ode,[tspan[0],tspan[-1]],[U0],t_eval=tspan)\n",
+    "\n",
+    "# The explicit solution we derived (having used he initial condition to find c)\n",
+    "mysol = 0.5+0.5*np.exp(-tspan**2)\n",
+    "\n",
+    "#Code to plot the output\n",
+    "plt.rcParams['figure.figsize'] = [8, 4]#\n",
+    "plt.rcParams.update({'font.size': 16})\n",
+    "fig1=plt.figure()\n",
+    "plt.plot(tspan,sol.y[0],'b', marker = 'o')\n",
+    "plt.plot(tspan,mysol,'r', marker = 'x')\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('U')\n",
+    "plt.show()\n",
+    "```\n",
     "```"
    ]
   },
