--- a/_sources/lecture8.ipynb
+++ b/_sources/lecture8.ipynb
@@ -149,7 +149,7 @@
     "(e) If $a<U(0)<K$ what is the limit as $t \\rightarrow \\infty$ of $U(t)$ ?\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "(a) The equilibria are where $U(K-U)(U-a)=0$, so $U=0$, $a$, or $K$.\n",
     "\n",
     "(b) Figure 12 shows the phase line.\n",
@@ -159,6 +159,7 @@
     "(d) Looking at the phase line (Figure 12) between $U=0$ and $U=a$, we see that the arrow is pointing left towards the equilibrium point at $U=0$. Hence $U(t) \\rightarrow 0$ as $t \\rightarrow \\infty$.\n",
     "\n",
     "(e) Looking at the phase line (Figure 12) between $U=a$ and $U=K$, we see that the arrow is pointing right towards the equilibrium point at $U=K$. Hence $U(t) \\rightarrow K$ as $t \\rightarrow \\infty$.\n",
+    "```\n",
     "````\n",
     "## Lecture 8 Homework exercises\n",
     "\n",
