--- a/_sources/lecture9.ipynb
+++ b/_sources/lecture9.ipynb
@@ -27,7 +27,7 @@
     "$$\n",
     "```\n",
     "\n",
-    "```{prf:example}\n",
+    "````{prf:example}\n",
     ":label: ex9_1\n",
     "Draw the direction field for a population of organisms with a seasonally fluctuating birth rate and constant intraspecific competition, given as follows\n",
     "\n",
@@ -38,7 +38,7 @@
     "$$\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "We want to draw arrows on the $(U, t)$-plane describing the direction of change of the solution. But the direction of change is simply the gradient of the derivative, $\\dot{U}$, and we have a formula for that in Equation (104). With this in mind, the general technique for plotting a direction field is as follows.\n",
     "\n",
     "1. Select a point $(t, U)$.\n",
@@ -68,9 +68,10 @@
     "\n",
     "*Figure 13: Direction field for Equation (104).*\n",
     "```\n",
+    "````\n",
     "Figure 13 also shows the solution to Equation (104) for two different initial conditions: $U(0)=4$, given by the top curve, and $U(0)=1 / 2$, given by the bottom curve. These are not algebraic expressions, but rather they are graphical solutions, showing how $U$ changes over time. Nonetheless, they are still solutions, and valuable for analysing ODEs.\n",
     "\n",
-    "```{prf:example}\n",
+    "````{prf:example}\n",
     "Suppose we have a population of animals living in an environment that is being slowly degraded over time (e.g. by climate change or deforestation). We can model this environmental degradation as a decline of carrying capacity: as the environment degrades, it\n",
     "is able to sustain less individuals. A simple model of this is as follows\n",
     "\n",
@@ -83,7 +84,7 @@
     "Plot the direction field in the case $r=K=\\mu=1$ for $0 \\leq U \\leq 2$ and $0 \\leq t \\leq 3$. What do you think will happen to $U(t)$ as $t \\rightarrow \\infty$ ? Why?\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "Values of $\\dot{U}$ for various $0 \\leq U \\leq 2$ and $0 \\leq t \\leq 3$ are given in Table 9. The resulting direction field is shown in Figure 14. If we start at any initial location $U(0)$, we see that the trajectory seems to be tending to 0 , so the animals die out. This is because the carrying capacity is $\\exp (-t)$, which tends to zero over time, i.e. the size of population that the environment can sustain decreases to zero over time.\n",
     "\n",
     "| $U \\downarrow, t \\rightarrow$ | 0 | 0.5 | 1 | 1.5 | 2 | 2.5 | 3 |\n",
@@ -104,6 +105,7 @@
     "\n",
     "*Figure 14: Direction field for Equation (105).*\n",
     "```\n",
+    "````\n",
     "## Lecture 9 Homework exercises\n",
     "\n",
     "```{admonition} Exercise 19\n",
