--- a/_sources/lecture10.ipynb
+++ b/_sources/lecture10.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "*Figure 15: A spring in a gravity-free environment, with a mass on one end, fixed at the other end, with extension given by $x(t)$.*\n",
     "\n",
-    "```{prf:example}\n",
+    "````{prf:example}\n",
     "Consider a mass $m$ on one end of a spring in a gravity-free environment (e.g. space), assuming that there is no friction. The other end is fixed. If we stretch the spring a distance $L$ and release it at time $t=0$, it has a single force acting on it, due to the tension of the spring, which we will call $T$. Hooke's law says that $T=k x$ where $k$ is the stiffness of the spring and $x$ is the extension of the spring. We can thus use the second law of motion (Equation 106) to show that\n",
     "\n",
     "$$\n",
@@ -37,7 +37,7 @@
     "(The reason for the minus sign is that the force is in the opposite direction to the extension, see Figure 15. The constant $\\omega$ will turn out to be the angular frequency of the oscillations, as we will see in the solution.) Find an expression for the extension, $x(t)$, as a function of time. Interpret the result physically, in terms of the movement of the mass, $m$.\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "The ODE can be written $\\ddot{x}+\\omega^{2} x=0$, where $\\omega$ is a constant. To solve such an ODE, we use something called an ansatz. That's a German word meaning, essentially, 'an educated guess that will be verified later'. The ansatz we use here is that $x=A \\cos (m t)$ for constants $m$ and $A \\neq 0$. Then $\\dot{x}=-m A \\sin (m t)$ and $\\ddot{x}=-m^{2} A \\cos (m t)$. Placing these expressions into the ODE $\\ddot{x}=-\\omega^{2} x$ gives\n",
     "\n",
     "$$\n",
@@ -60,6 +60,7 @@
     "\n",
     "Finally, we need to apply the initial condition. Notice that the question said 'we stretch the spring to a distance $L$ and release it at time $t=0$ '. This means that the extension at time $t=0$ is $L$, i.e. $x(0)=L$. Hence, by Equation (108), $L=x(0)=A \\cos (0)=A$. Thus the solution is $x(t)=L \\cos (\\omega t)$.\n",
     "```\n",
+    "````\n",
     "The physical interpretation is that the mass oscillates in perpetuity between $x=-L$ and $x=L$ with angular frequency $\\omega$. The angular frequency is related to the period, $T$, of the oscillation via $\\omega=2 \\pi / T$. You may recall the definition of period from Section 3 as the smallest $T>0$ such that $x(t)=x(t+T)$ for all $t$.\n",
     "\n",
     "### 10.1 Homogeneous second order ODEs with constant coefficients\n",
@@ -163,7 +164,7 @@
     "```\n",
     "For example, to find the general solution of $\\ddot{x}+4 \\dot{x}+8 x=0$, notice that $b=4$ and $c=8$ so $b^{2}-4 c=-16<0$ so we can apply Proposition 6 . Here, $q=2$, so $x(t)=$ $\\exp (-2 t)[A \\sin (2 t)+B \\cos (2 t)]$ for constants $A$ and $B$.\n",
     "\n",
-    "```{prf:example}\n",
+    "````{prf:example}\n",
     "A car is driving along a straight road. The car then has a single force acting on it: a friction force proportional to the speed of the car acting in the opposite direction to the movement of the car. Explain why the force acting on the car is $-\\beta \\dot{x}$ for some constant $\\beta>0$. Using the second law of motion, we have\n",
     "\n",
     "$$\n",
@@ -177,7 +178,7 @@
     "Suppose the car weighs 1000 kg ( kg is kilogrammes), its initial speed is $10 \\mathrm{~ms}^{-1}$ ( m is metres and $s$ is seconds), its initial location is $x(0)=0$, and $\\beta=100 \\mathrm{kgs}^{-1}$. How far does the car travel in the next 10 seconds?\n",
     "\n",
     "**Solution.**\n",
-    "\n",
+    "```{toggle}\n",
     "The friction force is acting in the opposite direction to the motion of the car, so is\n",
     "negative. It is also proportional to the speed of the car, which is $\\dot{x}$. Therefore the force acting on the car is $-\\beta \\dot{x}$.\n",
     "\n",
@@ -223,6 +224,7 @@
     "\n",
     "In the next 10 s , the car travels $x(10)=10[1-\\exp (-1)] \\approx 6.32 m$.\n",
     "```\n",
+    "````\n",
     "```{note}\n",
     "In the previous example, we introduced units of measurement. Speed was given in metres per second $\\left(\\mathrm{ms}^{-1}\\right)$ and mass in kilogrammes $(\\mathrm{kg})$. These are just standard units of speed and mass, but then $\\beta$ was given in units of kilogrammes per second. Why? The reason is that the units on either side of Equation (117) have to match. The left-hand side is an acceleration, so has units of $\\mathrm{ms}^{-2}$. The right-hand side must also have the same units. Since $m$ is in units of $k g$ and $\\dot{x}$ in units of $\\mathrm{ms}^{-1}$, we need $\\beta$ to be in units of $\\mathrm{kgs}^{-1}$ for $-\\beta \\dot{x} / \\mathrm{m}$ to be in units of $\\mathrm{ms}^{-2}$.\n",
     "```\n",
